Add links nos botões
Add os lins em todos os botões, com excessão ao do Facebook que ainda não criamos a página.

--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
         <a href="#planos">Planos</a>
         <a href="#contato">Redes</a>
         <!-- Botão cardápio (link) -->
-        <a class="cta" href="COLE_AQUI_O_LINK_DO_CARDAPIO" target="_blank" rel="noopener">
+        <a class="cta" href="https://drive.google.com/file/d/1IsfXER5dTmBp99FgZxxlQgWKK266XcM-/view" target="_blank" rel="noopener">
           Consultar cardápio
         </a>
       </nav>
@@ -417,7 +417,7 @@
           </p>
 
           <div class="heroActions">
-            <a class="cta" href="COLE_AQUI_O_LINK_DO_CARDAPIO" target="_blank" rel="noopener">
+            <a class="cta" href="https://drive.google.com/file/d/1IsfXER5dTmBp99FgZxxlQgWKK266XcM-/view" target="_blank" rel="noopener">
               Consultar cardápio
             </a>
             <a class="ghost" href="#onde">Ver onde pedir</a>
@@ -517,7 +517,7 @@
 
         <div class="socialRow" aria-label="Redes sociais">
           <!-- Troque os href pelos links oficiais -->
-          <a class="socialBtn" href="COLE_AQUI_O_LINK_DO_INSTAGRAM" target="_blank" rel="noopener" aria-label="Abrir Instagram">
+          <a class="socialBtn" href="https://www.instagram.com/stack80burger/" target="_blank" rel="noopener" aria-label="Abrir Instagram">
             <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M7.5 2h9A5.5 5.5 0 0 1 22 7.5v9A5.5 5.5 0 0 1 16.5 22h-9A5.5 5.5 0 0 1 2 16.5v-9A5.5 5.5 0 0 1 7.5 2Z" stroke="currentColor" stroke-width="2"/>
               <path d="M12 16a4 4 0 1 0 0-8 4 4 0 0 0 0 8Z" stroke="currentColor" stroke-width="2"/>
@@ -533,7 +533,7 @@
             Facebook
           </a>
 
-          <a class="socialBtn" href="COLE_AQUI_O_LINK_DO_LINKTREE" target="_blank" rel="noopener" aria-label="Abrir Linktr.ee">
+          <a class="socialBtn" href="https://linktr.ee/stack80" target="_blank" rel="noopener" aria-label="Abrir Linktr.ee">
             <svg class="icon" viewBox="0 0 24 24" fill="none" aria-hidden="true">
               <path d="M12 2l4.5 6H14l2.5 3H13v4.5l3.5 3.5H13l-1 2-1-2H7.5l3.5-3.5V11H7.5L10 8H7.5L12 2Z" fill="currentColor"/>
             </svg>
