Fix: Trocando link whatsapp
Trocando o link
De: https://api.whatsapp.com/send/?phone=5511982848417&text=Ol%C3%A1%21%0AQuero+ver+o+card%C3%A1pio+da+Stack+80%21&type=phone_number&app_absent=0
Para: https://wa.me/5511982848417?text=Ol%C3%A1%21%0AQuero+ver+o+card%C3%A1pio+da+Stack+80%21

--- a/index.html
+++ b/index.html
@@ -468,7 +468,7 @@
 			  <a class="pill" href="COLE_AQUI_O_LINK_DO_99FOOD" target="_blank" rel="noopener">
 				99 Food
 			  </a>
-			  <a class="pill" href="https://api.whatsapp.com/send/?phone=5511982848417&text=Ol%C3%A1%21%0AQuero+ver+o+card%C3%A1pio+da+Stack+80%21&type=phone_number&app_absent=0" target="_blank" rel="noopener">
+			  <a class="pill" href="https://wa.me/5511982848417?text=Ol%C3%A1%21%0AQuero+ver+o+card%C3%A1pio+da+Stack+80%21" target="_blank" rel="noopener">
 				WhatsApp
 			  </a>
             </div>
